# GANON_PROJECT

./: LICENSE  LoggedData.csv  init.m  untitled.slx  untitled.slxc
Documentation/: OMEGAAA.aux  OMEGAAA.lof  OMEGAAA.lol  OMEGAAA.out  OMEGAAA.tex  OMEGAAA.toc
Documentation/graphique/: algo_gene.tex  ex_async_timline.tex
Documentation/partie/: Introduction.tex  objectifs.tex  projetSTM.tex
Documentation/partie/annexes/: unknown.tex
Documentation/partie/async/: exemple_1.tex  exemple_2.tex  implementation.tex  main.tex  scheduler.tex  task.tex
Documentation/partie/drivers/: communication.tex  flash_stream.tex  main.tex  materiel.tex  w25q.tex
GANON_v0.1/: .mxproject  CMakeCache.txt  CMakeLists.txt  GANON_v0.1.ioc  build.ninja  cmake_install.cmake  compile_commands.json
GANON_v0.1/Core/Inc/: flash_stream.h  main.h  scheduler.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tools.h
GANON_v0.1/Core/Inc/drivers/: BMI088.h  buzzer.h  gps.h  rfm96w.h  w25q_mem.h
GANON_v0.1/Core/Inc/peripherals/: spi.h
GANON_v0.1/Core/Src/: flash_stream.c  main.c  scheduler.c  stm32f4xx_it.c  tools.c
GANON_v0.1/Core/Src/drivers/: BMI088.c  BMP388.c  buzzer.c  gps.c  rfm96w.c  w25q_mem.c
GANON_v0.1/Core/Src/peripherals/: dma.c  gpio.c  i2c.c  spi.c  tim.c  usart.c
GANON_v0.1/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
slprj/sim/varcache/untitled/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/untitled/tmwinternal/: simulink_cache.xml
